# osrssg

./: .gitignore  Cargo.toml  README.md  index.html  osrssg.d.ts  osrssg.js  osrssg_bg.wasm.d.ts
assets/: player.glb
src/: lib.rs  main.rs
src/components/: mod.rs
src/resources/: mod.rs
src/systems/: animation.rs  animation_new.rs  animation_old.rs  camera.rs  debug.rs  gathering.rs  input.rs  minimap.rs  mod.rs  movement.rs  setup.rs  spawn_resources.rs  ui.rs
wasm/: index.html  osrssg.js
